--- a/index.html
+++ b/index.html
@@ -1,13 +1,12 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>Challenge: Write a Poem</title>
+        <title>pagina de irene</title>
         <meta charset="utf-8">
     </head>
     <body>
     <h1>Encabezado</h1>
-        <p>
-        Nobody’s born smart. <br>We all start at 0. Can’t talk, can’t walk, certainly can’t do algebra.</p>
-        <p>Thankfully, <br>we are born to learn.</p>
+        <p>la vida esta para vivirla no para amargarse mis amoresss
+        </p>
     </body>
 </html>
