--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
         <meta charset="utf-8">
     </head>
     <body>
-            <p>la vida esta para vivirla no para amargarse mis amoresss
-        </p>
+            <p>la vida esta para vivirla no para amargarse mis amoresss </p>
+        <img src="https://cdn.vectorstock.com/i/1000x1000/44/60/i-love-animals-vector-4004460.webp">
     </body>
 </html>
